--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Resume to Azure
 on:
   push:
     branches:
-      - main  # Triggers when you push to the main branch
+      - main
 
 jobs:
   build-and-deploy:
@@ -27,4 +27,5 @@ jobs:
               --destination '$web' \
               --account-name azureresumeogunnubi \
               --overwrite
+
 
